# ai-navigator

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  start.command  start.sh  tailwind.config.js  vite.config.ts  启动.bat  启动.command  启动.sh  安装到Applications.command
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_tool.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AICard.tsx  AgentCard.tsx  DetailView.tsx  EmptyState.tsx  FavoriteButton.tsx  FilterBar.tsx  LogoImage.tsx  PageHeader.tsx  SearchBar.tsx  Sidebar.tsx
src/data/: agents.ts  ai.ts  tags.ts
src/hooks/: useTheme.ts  useUpdater.ts
src/lib/: browser.ts  search.ts  store.ts  utils.ts
src/pages/: AIPage.tsx  AgentPage.tsx  DetailPage.tsx  Favorites.tsx  Home.tsx  Recent.tsx  Settings.tsx
src/types/: index.ts
